<resources>
    <string name="app_name">InstagramClone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="vertical_ellipsis">&#8942;</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_account">Sign Up</string>
    <string name="forgot_pass_title">Send Password Reset Email</string>
    <string name="reset_pass">Reset Password</string>
    <string name="toolbar_sign_out">Sign Out</string>
    <string name="title_search">Search</string>
    <string name="title_add">Add</string>
    <string name="toolbar_add_data">Add Data</string>
    <string name="liked_by">Liked by</string>
    <string name="username">Username</string>
    <string name="post_time">x time ago</string>
    <string name="Add_comment">Add a comment...</string>
    <string name="name">Name</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="default_num">0</string>
    <string name="edit_button_text">Edit Profile</string>
    <string name="gallery">Gallery</string>
    <string name="add_photo">Photo</string>
    <string name="add_video">Video</string>
</resources>
