<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="5dp">
    <LinearLayout
        android:id="@+id/layout_post_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="@dimen/large_circular_image"
                android:layout_height="@dimen/large_circular_image"
                android:src="@drawable/profile"
                android:layout_alignParentStart="true"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000" />

            <TextView
                android:id="@+id/text_post_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/profile_image"
                android:text="Name"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:backgroundTint="#ffffff"
                android:src="@drawable/ellipses_black"/>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imgSkull"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@drawable/skull"
                android:background="@color/colorBlack"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_heart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:backgroundTint="#ffffff"
                android:src="@drawable/heart_outline_black" />
            <ImageButton
                android:id="@+id/btn_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/btn_heart"
                android:backgroundTint="#ffffff"
                android:src="@drawable/chat_bubble_outline"/>
            <ImageButton
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/btn_comment"
                android:backgroundTint="#ffffff"
                android:src="@drawable/send_filled"/>
            <ImageButton
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="#ffffff"
                android:src="@drawable/bookmark_outline"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/liked_by"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/text_number_liked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="0"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_post_username_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="Username This is the comment for the post, it consists of a couple lines of text"/>
                <TextView
                    android:id="@+id/text_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#A9A9A9"
                    android:text="View comments"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/user_liked_post_image"
                    android:layout_width="@dimen/small_circular_image"
                    android:layout_height="@dimen/small_circular_image"
                    android:src="@drawable/profile"
                    android:layout_alignParentStart="true"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:layout_toRightOf="@+id/user_liked_post_image"
                    android:text="@string/Add_comment"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="center_vertical"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/text_time_posted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_time"
                android:textColor="#A9A9A9"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
